# COMP.5230Project

./: README.md
doc/: Presentation.pptx  tgriffin_proposal.odt
docsrc/: FinalReport.odt  Presentation.pptx  ProposalPresentation.odp  ProposalPresentation_pp.ppt  Submission.odt  SurveyPaper.odt
src/compute_iou/: CMakeLists.txt  compute_iou.cpp
src/extractslice/: CMakeLists.txt  extractslice.cpp
src/include/: hessianeigenvalues.h  itkutils.h  split_lungs.h  threshold.h
src/lung_segmentation/: CMakeLists.txt  lung_segmentation.cpp
src/mhdinfo/: CMakeLists.txt  mhdinfo.cpp
